--- a/cmd/example-web/.env.default
+++ b/cmd/example-web/.env.default
@@ -2,3 +2,6 @@ PORT=5000
 LOG_LEVEL=debug
 LOG_FORMAT=text
 DATABASE_URL=postgres://docker:docker@172.17.0.1:5432/docker?sslmode=disable&connect_timeout=10
+HOSTNAME=go-example.v5.cmd.1
+DEIS_RELEASE=v5
+DEIS_APP=go-example
