--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,5 @@ LOG_LEVEL=debug
 HOST=0.0.0.0
 PORT=5000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432?sslmode=disable&connect_timeout=10
+TLS_CERT=server.pem
+TLS_KEY=server-key.pem
