--- a/.env.default
+++ b/.env.default
@@ -4,3 +4,4 @@ PORT=5000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432?sslmode=disable&connect_timeout=10
 TLS_CERT=server.pem
 TLS_KEY=server-key.pem
+TLS_CA_CERT=ca.pem
