--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,5 @@ indent_size = 4
 [{Makefile,Makefile.*,*.mk,*.go}]
 indent_style = tab
 
-[{*.json,.*.yml,*.yaml}]
+[{*.json,*.yml,*.yaml}]
 indent_size = 2
