--- a/gometalinter.cfg
+++ b/gometalinter.cfg
@@ -1,6 +1,7 @@
 {
   "Enable": ["goimports", "vet", "vetshadow", "deadcode", "structcheck", "megacheck", "varcheck"],
   "Format": "({{.Linter}}) | {{.Severity}} | {{.Path}}:{{.Line}}:{{if .Col}}{{.Col}}{{end}} | {{.Message}}",
+  "Errors": true,
   "Vendor": true,
   "Tests": true,
   "Sort": ["severity"],
