--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ dist: trusty
 sudo: false
 
 go:
-  - 1.9
+  - "1.10"
 
 install:
-  - go get github.com/alecthomas/gometalinter 
+  - go get -u gopkg.in/alecthomas/gometalinter.v2
   - gometalinter --install --update
 
 script:
